css/style.css
/* -------------------------------------------------------------------
				Norgren Designs v2.0
   -------------------------------------------------------------------  */

/* Title: Norgren Designs */
/* Author: Brian Wynn */
/* URL: www.norgrendesigns.com */


/* Author's Note:
Norgren Designs was built as a mobile-first website. All styles are oriented based off of a
mobile oriented design in a portrait layout. Media queries are added as the viewport size
increases. */


/* ------------------  Global Elements   -----------------------------  */
* {
	margin: 0;
	padding: 0;
}

html, body, footer {
	width: 100%;
	overflow-x: hidden;
	overflow-y: scroll
}

body {
	font-family: "Lato", Helvetica, sans-serif;
	font-size: 18px;
	background-color: #FCFCF8;
	color: #222;
	max-width: 1440px;
	margin: 0 auto;
}

p {
	line-height: 1.4;
}

header,
a {
	color: #377F5E;
}

a {
	text-decoration: none;
	-webkit-transition: .3s ease;
	-ms-transition: .3s ease;
	transition: .3s ease;
}

a:hover {
	text-decoration: underline;
}

ul {
	list-style-type: none;
}

.nav-line,
#logo-wrap {
	margin: 0 auto;
	}

button:active,
button:focus {
	outline: none;
}

label {
	display: block;
	margin: .5em 0;
}

form {
	width: 60%;
	margin: 0 auto;
}

.active {
	color: #999;
}

/* ------------------  Header Elements -------------------------------  */
header#globalHeader {
	height: 3em;
	overflow: hidden;
	border-bottom: .1em solid #377F5E;
}

div#logo-wrap, header#globalHeader > nav {
	height: inherit;
}

div#logo-wrap, header#globalHeader > nav, figure#headerIcon, div#logo-wrap h1, header#globalHeader > nav > ul > li {
	display: inline-block;
}

div#logo-wrap {
	width: 60%;
}

header#globalHeader > nav {
	width: 39%;
	float: right;
}

header#globalHeader > nav > ul {
	display: -webkit-flex;
	display: -ms-flexbox;
	display: flex;
	margin-top: 1.5em;
}

header#globalHeader > nav > ul > li {
	-webkit-flex-grow: 1;
	flex-grow: 1;
	border-right: 1px solid #377F5E;
}

header#globalHeader > nav > ul > li:last-child {
	border: none;
}

header#globalHeader > nav > ul > li > a {
	display: block;
	text-align: center;
}

div#logo-wrap, figure#headerIcon, div#logo-wrap h1 {
	float: left;
}

div#logo-wrap h1 {
	margin-top: .2em;
}

figure#headerIcon {
	background-image: url("../img/logo_grey.png");
	background-repeat: no-repeat;
	background-size: contain;
}

.logo {
	height: 100%;
	width: 3em;
	margin: 0 .5em;
}

#mobileNav {
	position: absolute;
	top: 0;
	right: 0;
	z-index: 2;
	width: 100%;
	display: none;
}

button#mobileNavBtn {
	float: right;
	height: 4em;
	width: 4em;
	margin: .45em;
	background-color: inherit;
	border: .2em solid #377F5E;
	border-radius: .5em;
	cursor: pointer;
	position: relative;
	transition: .5s background ease;
}

button#mobileNavBtn:hover {
	background-color: #377F5E;
}

button#mobileNavBtn:hover > svg > path.bar {
	fill: #fff;
}

.menu-bar {
	fill: green;
	height: 10px;
}

#mobileNav > nav {
	display: none;
	position: absolute;
	width: 100%;
	top: 3em;
	background-color: #377F5E;
	box-shadow: .5em .5em .5em rgba(0, 0, 0, .5);
}

#mobileNav > nav > ul > li {
	padding: .6em;
}

#mobileNav > nav > ul > li:first-of-type {
	padding-top: 1.2em;
}

#mobileNav > nav > ul > li > a {
	color: #FCFCF8;
	display: block;
	border-bottom: .1em solid #FCFCF8;
}

#mobileNav > nav > ul > li > a:hover {
	text-shadow: .05em .05em #224F3B;
	text-decoration: none;
	font-size: 1.1em;
}


/* ------------------  Content Elements ------------------------------  */
#contentSection {
	background-image: url("../img/banner-header.jpg");
	background-size: cover;
	background-position: center;
	width: 100%;
	overflow: hidden;
}

#contentSection > section {
	display: none;
	position: relative;
	top: 10%;
	left: 0;
	transition: 1.5s ease;
}

#contentSection > section.show {
	display: block;
}

#homePageContent,
#aboutPageContent,
#contactPageContent {
	min-height: 450px;
	width: 70%;
	margin: 3em auto;
	background-color: #FCFCF8;
	opacity: .9;
	box-shadow: 2px 2px 10px #666;
}

#companyPageContent {
	margin: 0 auto;
}

#contactPageContent {
	padding-bottom: 1em;
}

#homePageContent h1,
#aboutPageContent h1,
#contactPageContent h1 {
	text-align: center;
	padding: 1em;
}

#homePageContent p,
#aboutPageContent p,
#contactPageContent p {
	padding: .2em 2em;
	font-size: .9em;
}

#homePageContent p:last-child,
#aboutPageContent p:last-child,
#contactPageContent p:last-child {
	padding: 2em;
}


/* ------------------  Company Page ----------------------------------- */
section#companyProfile {
	height: 100%;
	width: 100%;
	display: -webkit-flex;
	display: flex;
	-webkit-flex-flow: row wrap;
	flex-flow: row wrap;
	-webkit-align-items: stretch;
	align-items: stretch;
}

section#companyProfile .profileBox {
	-webkit-flex-grow: 1;
	flex-grow: 1;
	width: 20%;
	min-height: 14em;
	max-width: 27%;
	background: #377F5E;
	color: #fff;
	margin: 1em;
}

section#companyProfile figure.portrait {
	background-color: goldenrod;
	min-height: 12em;
	width: 100%;
	position: relative;
	z-index: 1;
}

.profileBox h3,
#companyPageContent div.profileBox p {
	padding: .3em;
}

#companyPageContent article {
    background-color: #FCFCF8;
    opacity: .9;
    display: block;
    flex-grow: 1;
    padding: 1em;
		margin: 1em;
}

#companyPageContent article p:first-child {
	font-weight: bold;
	text-decoration: underline;
}


/* ------------------  Contact Container ---------------------------------- */
#contactContainer {
	width: 100%;
	position: absolute;
	z-index: 2;
	top: 0;
	left: 0;
}

#contact-form input[type="text"],
#contact-form input[type="email"],
#contact-form textarea {
	width: 100%;
	border-radius: 3px;
	font-size: 1.1em;
	border: 1px solid #999;
	padding: .1em;
}

#contact-form textarea {
	min-height: 3em;
}

#contact-form input[type="text"]:focus,
#contact-form input[type="text"]:active,
#contact-form input[type="email"]:focus,
#contact-form input[type="email"]:active,
#contact-form textarea:focus,
#contact-form textarea:active {
	outline: none;
}

button#closeContainer {
	background-color: inherit;
	color: #999;
}

button#closeContainer,
button#send {
	font-size: 1.2em;
	border: none;
	cursor: pointer;
	margin: .5em;
}

button#closeContainer:hover {
	color: #333;
}

button#send {
	background-color: #377F5E;
	color: white;
	padding: .3em .5em;
	margin-left: 0;
	-webkit-transition: .3s ease-in-out;
	-moz-transition: .3s ease-in-out;
	transition: .3s ease-in-out;
}

button#send:hover {
	background-color: green;
}

/* ------------------  Footer Elements -------------------------------  */

footer p {
	text-align: center;
	padding: 1em;
}

/* ------------------- Media Queries --------------------------------- */
@media only screen and (max-width: 767px) {
	form {
		width: 85%;
	}

	header#globalHeader > nav {
		display: none;
	}

	#mobileNav {
		display: block;
	}

	div#logo-wrap {
		width: 80%;
	}

	div#logo-wrap h1 {
		font-size: 1.5em;
		margin-top: .4em;
	}

	#contentSection > section {
		width: 95%;
		-webkit-transition: 1.5s background ease-in-out;
		-ms-transition: 1.5s background ease-in-out;
		transition: 1.5s background ease-in-out;
	}

	section#companyProfile .profileBox {
		width: 30%;
		max-width: 100%;
	}

	button#send {
		display: block;
		margin: 1em auto;
		width: 60%;
	}
}

